fix: 930 - center media grid on tablets

--- a/src/widgets/media-grid/ui/media-grid.module.scss
+++ b/src/widgets/media-grid/ui/media-grid.module.scss
@@ -40,8 +40,8 @@
     }
   }
 
-  @include media-mobile-landscape {
+  @include media-tablet {
     gap: 0;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
